# emma65-rust

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml
debugger/frontend/: index.html  package-lock.json  package.json  terminal.html  vite.config.ts
debugger/src-tauri/: Cargo.toml  tauri.conf.json
debugger/src-tauri/capabilities/: default.json
debugger/src-tauri/src/: lib.rs  main.rs  theme.rs
doc/: 6522-via-edge-cases.md  debugger-ideation-prompt.md  debugger-implementation-plan-prompt.md  debugger-implementation-plan.md  debugger-terminal-architecture-prompt.md  debugger-terminal-architecture.md  debugger-ui-design-refinement-prompt.md  debugger-ui-spec.md  emulator-bus-config-improvement-plan.md  emulator-config-plan.md  emulator-default-config.md  emulator-help-improvement.md  emulator-hex-loader-plan.md  emulator-hex-loader-prompt.md  emulator-ideation-phase.md  emulator-implementation-plan.md  emulator-product-context-and-implementation-plan-discussion.md  emulator-refinement-phase.md  emulator-specification.md  emulator-startup-config-plan.md  emulator-via-protocol.md  readme-prompt.md  terminal-sizing-plan.md
doc/presentation/: slides.html  slides.md
src/: lib.rs  main.rs  wdc6502.rs
src/emulator/: error.rs  mod.rs  session.rs
src/emwatch/: evaluator.rs  location.rs  machine.rs  mod.rs  scanner.rs  token.rs
src/watch/: compiler.rs  context.rs  mod.rs  (+9 more)
tests/: config_integration.rs  emulator_binary.rs  exec_integration.rs  klaus_dormann_65c02.rs  system_integration.rs
util/: via_sr_peripheral.py
(+77 files in other folders)
