[package]
name = "emma65"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "emma65"
path = "src/main.rs"

[lib]
name = "emma65"
path = "src/lib.rs"

[dependencies]
# Core emulator
bitflags = "2"
thiserror = "2"
crossbeam-channel = "0.5"
libc = "0.2"
tokio = { version = "1", features = ["net", "io-util", "rt", "rt-multi-thread", "sync", "macros", "fs", "time"] }
nix = { version = "0.29", features = ["fs", "ioctl", "term"] }
# Emulator configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "env"] }